Bug 283304 - digikam from git crashes after splash screen
Summary: digikam from git crashes after splash screen
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ProgressManager-Splashscreen (other bugs)
Version First Reported In: 2.3.0
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-04 10:31 UTC by S. Burmeister
Modified: 2022-02-05 12:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2011-10-04 10:31:41 UTC
Application: digikam (2.3.0)
KDE Platform Version: 4.7.1 (4.7.1)
Qt Version: 4.7.4
Operating System: Linux 2.6.37.6-0.7-default i686
Distribution: "openSUSE 11.4 (i586)"

-- Information about the crash:
- What I was doing when the application crashed:

With todays git checkout digikam crashes after the splash screen, i.e. a second after it creates the normal digikam window.

The crash can be reproduced every time.

-- Backtrace:
Application: digiKam (digikam), signal: Aborted
[Current thread is 1 (Thread 0xb0a9ba50 (LWP 20076))]

Thread 8 (Thread 0xafc3db70 (LWP 20077)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb4fea105 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb5062310 in wait (this=0x8683abc, mutex=0x8683ab8, time=4294967295) at thread/qwaitcondition_unix.cpp:88
#3  QWaitCondition::wait (this=0x8683abc, mutex=0x8683ab8, time=4294967295) at thread/qwaitcondition_unix.cpp:160
#4  0x081ecbff in Digikam::ScanController::run (this=0x86a3338) at /home/rabauke/devel/src/digikam-software-compilation/core/digikam/database/scancontroller.cpp:647
#5  0xb5061c23 in QThreadPrivate::start (arg=0x86a3338) at thread/qthread_unix.cpp:331
#6  0xb4fe5b05 in start_thread () from /lib/libpthread.so.0
#7  0xb427ad1e in clone () from /lib/libc.so.6

Thread 7 (Thread 0xaf43cb70 (LWP 20078)):
#0  0xb2af322b in clock_gettime () from /lib/librt.so.1
#1  0xb50bb345 in do_gettime () at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb518e1b6 in updateCurrentTime (this=0xaeb00b74, tm=...) at kernel/qeventdispatcher_unix.cpp:339
#4  QTimerInfoList::timerWait (this=0xaeb00b74, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0xb518c9fb in timerSourcePrepareHelper (src=<value optimized out>, timeout=0xaf43c0ec) at kernel/qeventdispatcher_glib.cpp:136
#6  0xb518ca9d in timerSourcePrepare (source=0xaeb00b40, timeout=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0xb2e54a70 in g_main_context_prepare () from /lib/libglib-2.0.so.0
#8  0xb2e558e2 in ?? () from /lib/libglib-2.0.so.0
#9  0xb2e55fce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#10 0xb518d247 in QEventDispatcherGlib::processEvents (this=0x8685f60, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0xb515dc5d in QEventLoop::processEvents (this=0xaf43c280, flags=...) at kernel/qeventloop.cpp:149
#12 0xb515de89 in QEventLoop::exec (this=0xaf43c280, flags=...) at kernel/qeventloop.cpp:201
#13 0xb505efd9 in QThread::exec (this=0x86a7de8) at thread/qthread.cpp:498
#14 0xb513d9ed in QInotifyFileSystemWatcherEngine::run (this=0x86a7de8) at io/qfilesystemwatcher_inotify.cpp:248
#15 0xb5061c23 in QThreadPrivate::start (arg=0x86a7de8) at thread/qthread_unix.cpp:331
#16 0xb4fe5b05 in start_thread () from /lib/libpthread.so.0
#17 0xb427ad1e in clone () from /lib/libc.so.6

Thread 6 (Thread 0xaeaffb70 (LWP 20080)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb4fea105 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb5062310 in wait (this=0xaeb4f648, mutex=0xaeb4f644, time=4294967295) at thread/qwaitcondition_unix.cpp:88
#3  QWaitCondition::wait (this=0xaeb4f648, mutex=0xaeb4f644, time=4294967295) at thread/qwaitcondition_unix.cpp:160
#4  0xb682cc70 in Digikam::ParkingThread::run (this=0xaeb4f638) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/threads/threadmanager.cpp:119
#5  0xb5061c23 in QThreadPrivate::start (arg=0xaeb4f638) at thread/qthread_unix.cpp:331
#6  0xb4fe5b05 in start_thread () from /lib/libpthread.so.0
#7  0xb427ad1e in clone () from /lib/libc.so.6

Thread 5 (Thread 0xa67ddb70 (LWP 20200)):
#0  0xaec34f90 in ?? () from /usr/lib/qt4/plugins/sqldrivers/libqsqlite.so
#1  0xb7834362 in QSqlResult::savePrepare(QString const&) () from /usr/lib/libQtSql.so.4
#2  0xb7825fc2 in QSqlQuery::prepare(QString const&) () from /usr/lib/libQtSql.so.4
#3  0xb67e037b in Digikam::SqlQuery::prepare (this=0xa67dcc98, query=...) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/database/sqlquery.cpp:52
#4  0xb67d15a9 in Digikam::DatabaseCoreBackend::prepareQuery (this=0xaeb1da90, sql=...) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/database/databasecorebackend.cpp:1459
#5  0xb67cfb8d in Digikam::DatabaseCoreBackend::execQuery (this=0xaeb1da90, sql=..., boundValue1=..., boundValue2=..., boundValue3=..., boundValue4=...) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/database/databasecorebackend.cpp:1021
#6  0xb67cf5f5 in Digikam::DatabaseCoreBackend::execSql (this=0xaeb1da90, sql=..., boundValue1=..., boundValue2=..., boundValue3=..., boundValue4=..., values=0x0, lastInsertId=0xa67dcdb8) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/database/databasecorebackend.cpp:921
#7  0xb67daac7 in Digikam::ThumbnailDB::insertThumbnail (this=0xaeb1d888, info=..., lastInsertId=0xa67dce54) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/database/thumbnaildb.cpp:262
#8  0xb680bdb5 in Digikam::ThumbnailCreator::storeInDatabase (this=0x873d9c8, info=..., image=...) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/threadimageio/thumbnailcreator.cpp:753
#9  0xb6809576 in Digikam::ThumbnailCreator::load (this=0x873d9c8, path=..., rect=..., pregenerate=false) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/threadimageio/thumbnailcreator.cpp:264
#10 0xb6809155 in Digikam::ThumbnailCreator::load (this=0x873d9c8, path=...) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/threadimageio/thumbnailcreator.cpp:196
#11 0xb6816654 in Digikam::ThumbnailLoadingTask::execute (this=0x9ea50d0) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/threadimageio/thumbnailtask.cpp:169
#12 0xb67f58c5 in Digikam::LoadSaveThread::run (this=0x87d5fa8) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/threadimageio/loadsavethread.cpp:118
#13 0xb682f128 in Digikam::DynamicThread::DynamicThreadPriv::run (this=0x86cfc18) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/threads/dynamicthread.cpp:328
#14 0xb5056013 in QThreadPoolThread::run (this=0x928f728) at concurrent/qthreadpool.cpp:106
#15 0xb5061c23 in QThreadPrivate::start (arg=0x928f728) at thread/qthread_unix.cpp:331
#16 0xb4fe5b05 in start_thread () from /lib/libpthread.so.0
#17 0xb427ad1e in clone () from /lib/libc.so.6

Thread 4 (Thread 0xa5fdcb70 (LWP 20211)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb4fea105 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#2  0xb5060bcc in QMutexPrivate::wait (this=0xaeb1e3c0, timeout=-1) at thread/qmutex_unix.cpp:84
#3  0xb505d0fa in QMutex::lock (this=0xaeb1ae14) at thread/qmutex.cpp:167
#4  0xb67d888a in Digikam::ThumbnailDatabaseAccess::ThumbnailDatabaseAccess (this=0xa5fdbe7f) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/database/thumbnaildatabaseaccess.cpp:87
#5  0xb680bcfb in Digikam::ThumbnailCreator::storeInDatabase (this=0x86ecc60, info=..., image=...) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/threadimageio/thumbnailcreator.cpp:736
#6  0xb6809576 in Digikam::ThumbnailCreator::load (this=0x86ecc60, path=..., rect=..., pregenerate=true) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/threadimageio/thumbnailcreator.cpp:264
#7  0xb6808fb7 in Digikam::ThumbnailCreator::pregenerate (this=0x86ecc60, path=...) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/threadimageio/thumbnailcreator.cpp:180
#8  0xb68162ae in Digikam::ThumbnailLoadingTask::execute (this=0x9ebc4d8) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/threadimageio/thumbnailtask.cpp:79
#9  0xb67f58c5 in Digikam::LoadSaveThread::run (this=0x8712618) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/threadimageio/loadsavethread.cpp:118
#10 0xb682f128 in Digikam::DynamicThread::DynamicThreadPriv::run (this=0x8755f30) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/threads/dynamicthread.cpp:328
#11 0xb5056013 in QThreadPoolThread::run (this=0x86df7f0) at concurrent/qthreadpool.cpp:106
#12 0xb5061c23 in QThreadPrivate::start (arg=0x86df7f0) at thread/qthread_unix.cpp:331
#13 0xb4fe5b05 in start_thread () from /lib/libpthread.so.0
#14 0xb427ad1e in clone () from /lib/libc.so.6

Thread 3 (Thread 0xa57dbb70 (LWP 20212)):
#0  0xb30de4c1 in ?? () from /usr/lib/libgomp.so.1
#1  0xb30de56e in ?? () from /usr/lib/libgomp.so.1
#2  0xb30dce60 in ?? () from /usr/lib/libgomp.so.1
#3  0xb4fe5b05 in start_thread () from /lib/libpthread.so.0
#4  0xb427ad1e in clone () from /lib/libc.so.6

Thread 2 (Thread 0xa4dffb70 (LWP 20214)):
#0  0xb30de4c1 in ?? () from /usr/lib/libgomp.so.1
#1  0xb30de56e in ?? () from /usr/lib/libgomp.so.1
#2  0xb30dce60 in ?? () from /usr/lib/libgomp.so.1
#3  0xb4fe5b05 in start_thread () from /lib/libpthread.so.0
#4  0xb427ad1e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb0a9ba50 (LWP 20076)):
[KCrash Handler]
#7  0xffffe430 in __kernel_vsyscall ()
#8  0xb41d28df in raise () from /lib/libc.so.6
#9  0xb41d4220 in abort () from /lib/libc.so.6
#10 0xb5057cda in qt_message_output (msgType=QtFatalMsg, buf=0x9f0d938 "ASSERT failure in QVector<T>::operator[]: \"index out of range\", file /usr/include/QtCore/qvector.h, line 347") at global/qglobal.cpp:2291
#11 0xb5057edf in qt_message (msgType=QtFatalMsg, msg=0xb51c714c "ASSERT failure in %s: \"%s\", file %s, line %d", ap=0xbf934ad4 "\266pH\266ipH\266\211pH\266[\001") at global/qglobal.cpp:2337
#12 0xb5057ff8 in qFatal (msg=0xb51c714c "ASSERT failure in %s: \"%s\", file %s, line %d") at global/qglobal.cpp:2520
#13 0xb505803d in qt_assert_x (where=0xb64870b6 "QVector<T>::operator[]", what=0xb6487069 "index out of range", file=0xb6487089 "/usr/include/QtCore/qvector.h", line=347) at global/qglobal.cpp:2044
#14 0xb6372431 in QVector<int>::operator[] (this=0x86ac2ec, i=0) at /usr/include/QtCore/qvector.h:347
#15 0xb63bcbd1 in Digikam::TagsCache::pickLabelFromTags (this=0x86aadd0, tagIds=...) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/database/tagscache.cpp:1029
#16 0xb636bbb1 in Digikam::ImageInfo::pickLabel (this=0xbf934c0c) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/database/imageinfo.cpp:444
#17 0x08223692 in Digikam::ImageDelegate::paint (this=0xaeb55560, p=0xbf934e94, option=..., index=...) at /home/rabauke/devel/src/digikam-software-compilation/core/digikam/items/imagedelegate.cpp:331
#18 0xb6870fe4 in Digikam::DigikamKCategorizedView::paintEvent (this=0xaeb4b778, event=0xbf935864) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/widgets/itemview/digikamkcategorizedview.cpp:871
#19 0x0821fa6b in Digikam::ImageCategorizedView::paintEvent (this=0xaeb4b778, e=0xbf935864) at /home/rabauke/devel/src/digikam-software-compilation/core/digikam/items/imagecategorizedview.cpp:700
#20 0xb4640b0a in QWidget::event (this=0xaeb4b778, event=0xbf935864) at kernel/qwidget.cpp:8441
#21 0xb4a53d15 in QFrame::event (this=0xaeb4b778, e=0xbf935864) at widgets/qframe.cpp:557
#22 0xb4ae5851 in QAbstractScrollArea::viewportEvent (this=0xaeb4b778, e=0xbf935864) at widgets/qabstractscrollarea.cpp:1043
#23 0xb4b89b64 in QAbstractItemView::viewportEvent (this=0xaeb4b778, event=0xbf935864) at itemviews/qabstractitemview.cpp:1628
#24 0xb687ebaa in Digikam::DCategorizedView::viewportEvent (this=0xaeb4b778, event=0xbf935864) at /home/rabauke/devel/src/digikam-software-compilation/core/libs/widgets/itemview/dcategorizedview.cpp:947
#25 0xb4ae8146 in viewportEvent (this=0xaeb1bce8, o=0xaeb1bc40, e=0xbf935864) at widgets/qabstractscrollarea_p.h:100
#26 QAbstractScrollAreaFilter::eventFilter (this=0xaeb1bce8, o=0xaeb1bc40, e=0xbf935864) at widgets/qabstractscrollarea_p.h:116
#27 0xb515eb16 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x857afa0, receiver=0xaeb1bc40, event=0xbf935864) at kernel/qcoreapplication.cpp:902
#28 0xb45e5594 in QApplicationPrivate::notify_helper (this=0x857afa0, receiver=0xaeb1bc40, e=0xbf935864) at kernel/qapplication.cpp:4477
#29 0xb45ee414 in QApplication::notify (this=0xbf93801c, receiver=0xaeb1bc40, e=0xbf935864) at kernel/qapplication.cpp:4360
#30 0xb576abd1 in KApplication::notify (this=0xbf93801c, receiver=0xaeb1bc40, event=0xbf935864) at /usr/src/debug/kdelibs-4.7.1/kdeui/kernel/kapplication.cpp:311
#31 0xb515e97e in QCoreApplication::notifyInternal (this=0xbf93801c, receiver=0xaeb1bc40, event=0xbf935864) at kernel/qcoreapplication.cpp:787
#32 0xb463d7a2 in sendSpontaneousEvent (this=0xaeb47d08, pdev=0x86e8d6c, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at ../../src/corelib/kernel/qcoreapplication.h:218
#33 QWidgetPrivate::drawWidget (this=0xaeb47d08, pdev=0x86e8d6c, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5528
#34 0xb463e4f7 in QWidgetPrivate::paintSiblingsRecursive (this=0xaeb673c8, pdev=0x86e8d6c, siblings=..., index=<value optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5735
#35 0xb463e3bd in QWidgetPrivate::paintSiblingsRecursive (this=0xaeb673c8, pdev=0x86e8d6c, siblings=..., index=18, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5722
#36 0xb463e3bd in QWidgetPrivate::paintSiblingsRecursive (this=0xaeb673c8, pdev=0x86e8d6c, siblings=..., index=19, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5722
#37 0xb463e3bd in QWidgetPrivate::paintSiblingsRecursive (this=0xaeb673c8, pdev=0x86e8d6c, siblings=..., index=20, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5722
#38 0xb463e3bd in QWidgetPrivate::paintSiblingsRecursive (this=0xaeb673c8, pdev=0x86e8d6c, siblings=..., index=21, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5722
#39 0xb463e3bd in QWidgetPrivate::paintSiblingsRecursive (this=0xaeb673c8, pdev=0x86e8d6c, siblings=..., index=22, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5722
#40 0xb463d4f8 in QWidgetPrivate::drawWidget (this=0xaeb673c8, pdev=0x86e8d6c, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5581
#41 0xb463e4f7 in QWidgetPrivate::paintSiblingsRecursive (this=0xaeb47300, pdev=0x86e8d6c, siblings=..., index=<value optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5735
#42 0xb463d4f8 in QWidgetPrivate::drawWidget (this=0xaeb47300, pdev=0x86e8d6c, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5581
#43 0xb463e4f7 in QWidgetPrivate::paintSiblingsRecursive (this=0xaeb64e78, pdev=0x86e8d6c, siblings=..., index=<value optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5735
#44 0xb463d4f8 in QWidgetPrivate::drawWidget (this=0xaeb64e78, pdev=0x86e8d6c, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5581
#45 0xb463e4f7 in QWidgetPrivate::paintSiblingsRecursive (this=0xaeb650e8, pdev=0x86e8d6c, siblings=..., index=<value optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5735
#46 0xb463d4f8 in QWidgetPrivate::drawWidget (this=0xaeb650e8, pdev=0x86e8d6c, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5581
#47 0xb463e4f7 in QWidgetPrivate::paintSiblingsRecursive (this=0x86a2230, pdev=0x86e8d6c, siblings=..., index=<value optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5735
#48 0xb463d4f8 in QWidgetPrivate::drawWidget (this=0x86a2230, pdev=0x86e8d6c, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5581
#49 0xb463e4f7 in QWidgetPrivate::paintSiblingsRecursive (this=0xaeb37bc0, pdev=0x86e8d6c, siblings=..., index=<value optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5735
#50 0xb463e3bd in QWidgetPrivate::paintSiblingsRecursive (this=0xaeb37bc0, pdev=0x86e8d6c, siblings=..., index=132, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5722
#51 0xb463d4f8 in QWidgetPrivate::drawWidget (this=0xaeb37bc0, pdev=0x86e8d6c, rgn=..., offset=..., flags=5, sharedPainter=0x0, backingStore=0x86e67b8) at kernel/qwidget.cpp:5581
#52 0xb482eb88 in QWidgetBackingStore::sync (this=0x86e67b8) at painting/qbackingstore.cpp:1338
#53 0xb46323fb in QWidgetPrivate::syncBackingStore (this=0xaeb37bc0) at kernel/qwidget.cpp:1862
#54 0xb46415da in QWidget::event (this=0xaeb1ad08, event=0x9dcef58) at kernel/qwidget.cpp:8588
#55 0xb4a711fc in QMainWindow::event (this=0xaeb1ad08, event=0x9dcef58) at widgets/qmainwindow.cpp:1478
#56 0xb58472a4 in KMainWindow::event (this=0xaeb1ad08, ev=0x9dcef58) at /usr/src/debug/kdelibs-4.7.1/kdeui/widgets/kmainwindow.cpp:1100
#57 0xb588f272 in KXmlGuiWindow::event (this=0xaeb1ad08, ev=0x9dcef58) at /usr/src/debug/kdelibs-4.7.1/kdeui/xmlgui/kxmlguiwindow.cpp:126
#58 0xb45e55c4 in QApplicationPrivate::notify_helper (this=0x857afa0, receiver=0xaeb1ad08, e=0x9dcef58) at kernel/qapplication.cpp:4481
#59 0xb45ee414 in QApplication::notify (this=0xbf93801c, receiver=0xaeb1ad08, e=0x9dcef58) at kernel/qapplication.cpp:4360
#60 0xb576abd1 in KApplication::notify (this=0xbf93801c, receiver=0xaeb1ad08, event=0x9dcef58) at /usr/src/debug/kdelibs-4.7.1/kdeui/kernel/kapplication.cpp:311
#61 0xb515e97e in QCoreApplication::notifyInternal (this=0xbf93801c, receiver=0xaeb1ad08, event=0x9dcef58) at kernel/qcoreapplication.cpp:787
#62 0xb516270c in sendEvent (receiver=0x0, event_type=0, data=0x853c370) at kernel/qcoreapplication.h:215
#63 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x853c370) at kernel/qcoreapplication.cpp:1428
#64 0xb516285c in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1321
#65 0xb518d074 in sendPostedEvents (s=0x857d8b8) at kernel/qcoreapplication.h:220
#66 postEventSourceDispatch (s=0x857d8b8) at kernel/qeventdispatcher_glib.cpp:277
#67 0xb2e55509 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#68 0xb2e55d10 in ?? () from /lib/libglib-2.0.so.0
#69 0xb2e55fce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#70 0xb518d1fb in QEventDispatcherGlib::processEvents (this=0x8553988, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#71 0xb469c6aa in QGuiEventDispatcherGlib::processEvents (this=0x8553988, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#72 0xb515dc5d in QEventLoop::processEvents (this=0xbf937f24, flags=...) at kernel/qeventloop.cpp:149
#73 0xb515de89 in QEventLoop::exec (this=0xbf937f24, flags=...) at kernel/qeventloop.cpp:201
#74 0xb5162930 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#75 0xb45e3314 in QApplication::exec () at kernel/qapplication.cpp:3755
#76 0x082ad7f3 in main (argc=5, argv=0xbf9382a4) at /home/rabauke/devel/src/digikam-software-compilation/core/digikam/main/main.cpp:232

Reported using DrKonqi
Comment 1 caulier.gilles 2011-10-04 10:34:49 UTC
I can reproduce the crash here...

Gilles Caulier
Comment 2 Marcel Wiesweg 2011-10-04 19:49:27 UTC
Git commit a74a27b858d2dbdb03c98634855bc26c63239107 by Marcel Wiesweg.
Committed on 04/10/2011 at 21:48.
Pushed by mwiesweg into branch 'master'.

Fix two typos which broke pick labels assigning, display and sometimes crashed

BUG: 283304

M  +3    -1    NEWS
M  +2    -2    libs/database/imageinfo.cpp
M  +1    -1    libs/database/tagscache.cpp

http://commits.kde.org/digikam/a74a27b858d2dbdb03c98634855bc26c63239107