Fix two typos which broke pick labels assigning, display and sometimes crashed

BUG: 283304